--- a/Prototype/package.json
+++ b/Prototype/package.json
@@ -11,10 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0"
+    "dotenv": "^16.5.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
