--- a/Prototype/server/artifacts/contracts/BenefitLockAndReleaseNoDeadline.sol/BenefitLockAndReleaseNoDeadline.dbg.json
+++ b/Prototype/server/artifacts/contracts/BenefitLockAndReleaseNoDeadline.sol/BenefitLockAndReleaseNoDeadline.dbg.json
@@ -1,4 +1,4 @@
 {
   "_format": "hh-sol-dbg-1",
-  "buildInfo": "..\\..\\build-info\\8702fbad4e74fe26ef8c6bfbd814cada.json"
+  "buildInfo": "../../build-info/8a465b39c900ee05b6bba848d75f39ea.json"
 }
