--- a/Prototype/.gitignore
+++ b/Prototype/.gitignore
@@ -1,20 +1,20 @@
 node_modules
-# .env
+# # .env
 
-# Hardhat files
+# # Hardhat files
 /cache
 /artifacts
 
-# TypeChain files
+# # TypeChain files
 /typechain
 /typechain-types
 
-# solidity-coverage files
+# # solidity-coverage files
 /coverage
 /coverage.json
 
-# Hardhat Ignition default folder for deployments against a local node
-ignition/deployments/chain-31337
+# # Hardhat Ignition default folder for deployments against a local node
+# # ignition/deployments/chain-31337
 
 package-lock.json
 
