--- a/Prototype/package.json
+++ b/Prototype/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
-    "dotenv": "^16.5.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
