--- a/Prototype/contract_code/package.json
+++ b/Prototype/contract_code/package.json
@@ -13,5 +13,11 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "dotenv": "^16.5.0",
     "hardhat": "^2.23.0"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^1.3.0",
+    "@chainlink/functions-toolkit": "^0.3.2",
+    "install": "^0.13.0",
+    "npm": "^10.9.2"
   }
 }
